# 2021-tx-blackouts

./: README.md  outages.ipynb  pyproject.toml
data/: capacity.csv  outages.csv
