[tool.poetry]
name = "tx-blackouts"
version = "0.1.0"
description = ""
authors = ["John Freeman <jfreeman08@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.2"
seaborn = "^0.11.1"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
